--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -74,38 +74,13 @@
                 <div class="menu-content">
                     <div class="navigation">
                         <span class="pe-7s-close close-menu" id="close-button"></span>
-                        <div class="search-wrap js-ui-search">
-                            <input class="js-ui-text" type="text" placeholder="Search Here...">
-                            <span class="eks js-ui-close"></span>
-                        </div>
                     </div>
                     <nav class="menu">
                         <div class="menu-list">
                             <ul>
-                                <li class="menu-item-has-children"><a href="#">Home</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html">- Default</a></li>
-                                        <li><a href="index-architecture.html">- Architecture</a></li>
-                                        <li><a href="index-full-slider.html">- Slider Full Width</a></li>
-                                    </ul>
-                                </li>
+                                <li class="menu-item-has-children"><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="menu-item-has-children"><a href="#">Portfolio</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="portfolio-2column.html">-Portfolio 2 Column</a></li>
-                                        <li><a href="portfolio-3column.html">-Portfolio 3 Column</a></li>
-                                        <li><a href="portfolio-masonry.html">-Portfolio Masonry</a></li>
-                                        <li><a href="portfolio-dribbble.html">-Portfolio Dribbble</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children"><a href="#">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog Default</a></li>
-                                        <li><a href="blog-timeline.html">Blog Timeline</a></li>
-                                        <li><a href="single-blog.html">Blog Single</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -113,18 +88,11 @@
                     <div class="hidden-xs">
                         <div class="menu-social-media">
                             <ul>
-                               <li><a href="#"><i class="iconmoon-facebook"></i></a></li>
-                               <li><a href="#"><i class="iconmoon-twitter"></i></a></li>
-                               <li><a href="#"><i class="iconmoon-dribbble3"></i></a></li>
-                               <li><a href="#"><i class="iconmoon-pinterest"></i></a></li>
-                               <li><a href="#"><i class="iconmoon-linkedin2"></i></a></li>
-                            </ul>
-                        </div>
-
-                        <div class="menu-information">
-                            <ul>
-                                <li><span>T:</span> 003 124 115</li>
-                                <li><span>E:</span> info@mail.com</li>
+                                <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
+                                <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
+                                <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                                <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -134,62 +102,36 @@
 
         </div>
     </div>
-<div class="container">
-    <div class="page-error">
-        <h1>404</h1>
-        <h3> <i class="icon-sad"></i> Whoops!</h3>
-        <p>Sorry, but the page you were trying to view does not exist. Back to <a href="index.php">Home</a></p>
+
+    <div class="container">
+        <div class="page-error">
+            <h1>404</h1>
+            <h3> <i class="icon-sad"></i> Whoops!</h3>
+            <p>Sorry, but the page you were trying to view does not exist.</p>
+        </div>
     </div>
-</div>
-
-
-
-    
 
     <div class="footer margin-top">
         <div class="container">
             <div class="row">
-                    <div class="col-md-2 col-sm-4 col-xs-12">
-                        <div class="footer-inner">
-                            <div class="footer-content">
-                                <h4>O.A.K THEME</h4>
-                                    <address>
-                                        City 35 AM <br>
-                                        Street 1395 p.n <br>
-                                        your Country
-                                    </address>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-md-2 col-sm-4 col-xs-12"></div>
 
-                    <div class="col-md-2 col-md-push-8 col-sm-4 col-xs-12">
-                        <div class="footer-inner">
-                            <div class="footer-content">
-                               <h4>CONTACT INFO</h4>
-                                <p>
-                                    T:003 124 115 <br>
-                                    E:info@mail.com <br>
-                                    W:www.website.com
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-md-2 col-md-push-8 col-sm-4 col-xs-12"></div>
 
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="footer-inner">
-                            <div class="footer-content">
-                            <ul class="social-media">
-                                <li><a href="#"><i class="iconmoon-facebook"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-twitter"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-flickr2"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-dribbble3"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-pinterest"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-linkedin2"></i></a></li>
-                            </ul>
-                            <span class="copyright-mark">&copy; 2015 OAK, ALL RIGHTS RESERVED</span>
-                            </div>
+                <div class="col-md-4 col-sm-4 col-xs-12">
+                    <div class="footer-inner">
+                        <div class="footer-content">
+                        <ul class="social-media">
+                            <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
+                            <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
+                            <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                            <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
+                        </ul>
+                        <span class="copyright-mark">&copy; 2017 Yuria Nishimura</span>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
     </div>
