--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -53,6 +53,7 @@
 </head>
 
 <body>
+
     <!-- Preloader -->
     <div class="cover"></div>
 
@@ -68,43 +69,18 @@
             <button class="main-menu-indicator" id="open-button">
                 <span class="line"></span>
             </button>
-
+            
             <div class="menu-wrap" style="background-image: url(img/nav_bg.jpg)">
                 <div class="menu-content">
                     <div class="navigation">
                         <span class="pe-7s-close close-menu" id="close-button"></span>
-                        <div class="search-wrap js-ui-search">
-                            <input class="js-ui-text" type="text" placeholder="Search Here...">
-                            <span class="eks js-ui-close"></span>
-                        </div>
                     </div>
                     <nav class="menu">
                         <div class="menu-list">
                             <ul>
-                                <li class="menu-item-has-children"><a href="#">Home</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html">- Default</a></li>
-                                        <li><a href="index-architecture.html">- Architecture</a></li>
-                                        <li><a href="index-full-slider.html">- Slider Full Width</a></li>
-                                    </ul>
-                                </li>
+                                <li class="menu-item-has-children"><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="menu-item-has-children"><a href="#">Portfolio</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="portfolio-2column.html">-Portfolio 2 Column</a></li>
-                                        <li><a href="portfolio-3column.html">-Portfolio 3 Column</a></li>
-                                        <li><a href="portfolio-masonry.html">-Portfolio Masonry</a></li>
-                                        <li><a href="portfolio-dribbble.html">-Portfolio Dribbble</a></li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children"><a href="#">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog Default</a></li>
-                                        <li><a href="blog-timeline.html">Blog Timeline</a></li>
-                                        <li><a href="single-blog.html">Blog Single</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -112,18 +88,11 @@
                     <div class="hidden-xs">
                         <div class="menu-social-media">
                             <ul>
-                                <li><a href="#"><i class="iconmoon-facebook"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-twitter"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-dribbble3"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-pinterest"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-linkedin2"></i></a></li>
-                            </ul>
-                        </div>
-
-                        <div class="menu-information">
-                            <ul>
-                                <li><span>T:</span> 003 124 115</li>
-                                <li><span>E:</span> info@mail.com</li>
+                                <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
+                                <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
+                                <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                                <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
+                                <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -154,7 +123,7 @@
         <div class="portfolio-wrapper">
             <button class="nav">
                 <span class="icon-container">
-                <span class="line line01"></span>
+            <span class="line line01"></span>
                 <span class="line line02"></span>
                 <span class="line line03"></span>
                 <span class="line line04"></span>
@@ -171,7 +140,7 @@
                     <!-- Begin of Thumbs Portfolio -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_1.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_1.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -190,7 +159,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix web">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_2.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_2.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -209,7 +178,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix graphic">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_3.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_3.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -228,7 +197,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_5.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_4.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -247,7 +216,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_4.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_5.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -266,7 +235,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_6.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_6.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -285,7 +254,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_7.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_7.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -304,7 +273,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_8.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_8.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -323,64 +292,7 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_9.jpg" alt="Portfolio Item">
-                            <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">256</span>
-                                </a>
-                                <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
-                                </div>
-                                <span class="btnBefore"></span>
-                                <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 mix web">
-                        <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_10.jpg" alt="Portfolio Item">
-                            <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">256</span>
-                                </a>
-                                <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
-                                </div>
-                                <span class="btnBefore"></span>
-                                <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 mix web">
-                        <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_11.jpg" alt="Portfolio Item">
-                            <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">256</span>
-                                </a>
-                                <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
-                                </div>
-                                <span class="btnBefore"></span>
-                                <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 mix web">
-                        <div class="img home-portfolio-image">
-                            <img src="img/masonry-portfolio/img_12.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_9.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
                                 <a href="javascript:void(0)" class="like-product">
                                     <i class="ion-ios-heart-outline"></i>
@@ -404,44 +316,25 @@
             </div>
         </div>
     </div>
-    
+
     <div class="footer margin-top">
         <div class="container">
             <div class="row">
-                <div class="col-md-2 col-sm-4 col-xs-12">
-                    <div class="footer-inner">
-                        <div class="footer-content">
-                            <h4>O.A.K THEME</h4>
-                            <address>City 35 AM <br>Street 1395 p.n <br>your Country</address>
-                        </div>
-                    </div>
-                </div>
+                <div class="col-md-2 col-sm-4 col-xs-12"></div>
 
-                <div class="col-md-2 col-md-push-8 col-sm-4 col-xs-12">
-                    <div class="footer-inner">
-                        <div class="footer-content">
-                            <h4>CONTACT INFO</h4>
-                            <p>
-                                T:003 124 115
-                                <br> E:info@mail.com
-                                <br> W:www.website.com
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                <div class="col-md-2 col-md-push-8 col-sm-4 col-xs-12"></div>
 
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="footer-inner">
                         <div class="footer-content">
-                            <ul class="social-media">
-                                <li><a href="#"><i class="iconmoon-facebook"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-twitter"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-flickr2"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-dribbble3"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-pinterest"></i></a></li>
-                                <li><a href="#"><i class="iconmoon-linkedin2"></i></a></li>
-                            </ul>
-                            <span class="copyright-mark">&copy; 2015 OAK, ALL RIGHTS RESERVED</span>
+                        <ul class="social-media">
+                            <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
+                            <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
+                            <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                            <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
+                        </ul>
+                        <span class="copyright-mark">&copy; 2017 Yuria Nishimura</span>
                         </div>
                     </div>
                 </div>
