--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         </div>
     </div>
 
+
+    <!-- Hero Column -->
     <div class="container">
         <div class="slider-wrapper">
             <div class="slider-description">
@@ -126,70 +128,14 @@
             </div>
         </div>
     </div>
-    <div class="container margin-top">
-        <div class="history-wrapper">
-            <div class="col-md-6 wow fadeInUp" data-wow-duration="0.6s" data-wow-delay="0.5s">
-                <div class="row">
-                    <article>
-                        <h1>HISTORY OF AGENCY</h1>
-                        <hr>
-                        <h4>WHO LOVES OR PURSUES OR DESIRES TO OBTAIN PAIN OF ITSELF, BUT BECAUSE OCCASIONALLY CIRCUMSTANCES OCCUR AND PAIN CAN PROCURE HIM SOME GREAT PLEASURE</h4>
-                        <p>
-                        <br/>Porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi modi tempora incidunt ut labore.</p>
-                    </article>
-                </div>
-            </div>
-            <div class="col-md-5 col-md-offset-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
-                <div class="row">
-                    <div id="history-images" class="owl-carousel">
-                        <div><img class="img-responsive center-block" src="img/about_img.jpg" alt="About"></div>
-                        <div><img class="img-responsive center-block" src="img/about_img2.jpg" alt="About"></div>
-                        <div><img class="img-responsive center-block" src="img/about_img3.jpg" alt="About"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+
+    <!-- Work Column -->
     <div class="container margin-top">
         <div class="main-title">
-            <h1>WHY CHOOSE US?</h1>
+            <h1>WORK</h1>
             <hr>
-            <h6>Except to obtain some advantage from it</h6>
-        </div>
-        <div class="services-home-page">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="services-icon">
-                        <span class="icon-tools"></span>
-                        <hr>
-                    </div>
-                    <h4>BRANDING</h4>
-                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
-                </div>
-                <div class="col-md-4">
-                    <div class="services-icon">
-                        <span class="icon-globe"></span>
-                        <hr>
-                    </div>
-                    <h4>PLAN OF WORK</h4>
-                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
-                </div>
-                <div class="col-md-4">
-                    <div class="services-icon">
-                        <span class="icon-paintbrush"></span>
-                        <hr>
-                    </div>
-                    <h4>ILUSTRATION</h4>
-                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container margin-top">
-        <div class="main-title">
-            <h1>OUR WORK</h1>
-            <hr>
-            <h6>Laborious to obtain some advantage from it</h6>
+            <h6>My personal projects since 2015.</h6>
         </div>
         <div class="portfolio-wrapper">
             <button class="nav">
@@ -387,32 +333,79 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Skills Column -->
     <div class="container margin-top">
-        <div class="newsletter">
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="newsletter-left">
-                        <div class="newsletter-left-inner">
-                            <h1>STAY INFORMED <br> WITH OUR <b>NEWSLETTER</b></h1>
-                        </div>
+        <div class="main-title">
+            <h1>Skills & Interests</h1>
+            <hr>
+            <h6>Except to obtain some advantage from it</h6>
+        </div>
+        <div class="services-home-page">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="icon-tools"></span>
+                        <hr>
                     </div>
+                    <h4>BRANDING</h4>
+                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="icon-globe"></span>
+                        <hr>
+                    </div>
+                    <h4>PLAN OF WORK</h4>
+                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
+                </div>
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="icon-paintbrush"></span>
+                        <hr>
+                    </div>
+                    <h4>ILUSTRATION</h4>
+                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
                 </div>
             </div>
-            <div class="col-md-6">
+        </div>
+    </div>
+
+
+    <!-- About Column -->
+    <div class="container margin-top">
+        <div class="history-wrapper">
+            <div class="col-md-6 wow fadeInUp" data-wow-duration="0.6s" data-wow-delay="0.5s">
                 <div class="row">
-                    <div class="newsletter-right" style="background: url(img/newsletter-bg.jpg)">
-                        <div class="newsletter-right-inner">
-                            <form>
-                                <input type="text" name="newsletter" placeholder="ENTER YOUR EMAIL">
-                                <input type="submit" value="SUBSCRIBE">
-                            </form>
-                        </div>
+                    <article>
+                        <h1>About me</h1>
+                        <hr>
+                        <h4>Hi, I'm Yuria Nishimura.<br/>
+                            A Frontend Developer familier with UI/UX.
+                        </h4>
+                        <p><br/>
+                            My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.<br/>
+                            <br/>
+                            In my spare time, I love working on side projects with my friends, enjoying having tea, playing board games and video games, traveling and cooking.
+                        </p>
+                    </article>
+                </div>
+            </div>
+            <div class="col-md-5 col-md-offset-1 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
+                <div class="row">
+                    <div id="history-images" class="owl-carousel">
+                        <div><img class="img-responsive center-block" src="img/about_img.jpg" alt="About"></div>
+                        <div><img class="img-responsive center-block" src="img/about_img2.jpg" alt="About"></div>
+                        <div><img class="img-responsive center-block" src="img/about_img3.jpg" alt="About"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+
+    <!-- Footer -->
     <div class="footer margin-top">
         <div class="container">
             <div class="row">
