:sparkles: Clean and add work

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
                     <img src="img/logo.png" alt="Logo">
                 </a>
             </div>
-            
+
             <!-- Menu Hamburger (Default) -->
             <button class="main-menu-indicator" id="open-button">
                 <span class="line"></span>
             </button>
-            
+
             <div class="menu-wrap" style="background-image: url(img/nav_bg.jpg)">
                 <div class="menu-content">
                     <div class="navigation">
@@ -148,25 +148,21 @@
             </button>
             <div class="works-filter">
                 <a href="javascript:void(0)" class="filter active" data-filter="mix">All</a>
+                <a href="javascript:void(0)" class="filter" data-filter="web">Website</a>
+                <a href="javascript:void(0)" class="filter" data-filter="mobile">Mobile App</a>
                 <a href="javascript:void(0)" class="filter" data-filter="branding">Branding</a>
-                <a href="javascript:void(0)" class="filter" data-filter="web">Web Design</a>
-                <a href="javascript:void(0)" class="filter" data-filter="graphic">Graphic Design</a>
             </div>
             <div class="js-masonry">
                 <div class="row" id="work-grid">
                     <!-- Begin of Thumbs Portfolio -->
-                    <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
+                    <!-- Item 1 -->
+                    <div class="col-md-4 col-sm-4 col-xs-12 mix mobile">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_1.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_9.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">250</span>
-                                </a>
                                 <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
+                                    <span class="title">Oh Designie</span>
+                                    <span class="info">Andriod/iOS App</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
@@ -174,18 +170,44 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Item 2 -->
+                    <div class="col-md-4 col-sm-4 col-xs-12 mix mobile">
+                        <div class="img home-portfolio-image">
+                            <img src="img/home-portfolio/img_8.jpg" alt="Portfolio Item">
+                            <div class="overlay-thumb">
+                                <div class="details">
+                                    <span class="title">Perfect Morning</span>
+                                    <span class="info">iOS App</span>
+                                </div>
+                                <span class="btnBefore"></span>
+                                <span class="btnAfter"></span>
+                                <a class="main-portfolio-link" href="single-project.html"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Item 3 -->
+                    <div class="col-md-4 col-sm-4 col-xs-12 mix mobile">
+                        <div class="img home-portfolio-image">
+                            <img src="img/home-portfolio/img_7.jpg" alt="Portfolio Item">
+                            <div class="overlay-thumb">
+                                <div class="details">
+                                    <span class="title">Wordbook to share</span>
+                                    <span class="info">iOS App</span>
+                                </div>
+                                <span class="btnBefore"></span>
+                                <span class="btnAfter"></span>
+                                <a class="main-portfolio-link" href="single-project.html"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Item 4 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix web">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_2.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_6.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">60</span>
-                                </a>
                                 <div class="details">
-                                    <span class="title">WATCH-J</span>
-                                    <span class="info">NEW TREND FASHION</span>
+                                    <span class="title">CAVANCLE</span>
+                                    <span class="info">Website</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
@@ -193,56 +215,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 mix graphic">
-                        <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_3.jpg" alt="Portfolio Item">
-                            <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">1060</span>
-                                </a>
-                                <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
-                                </div>
-                                <span class="btnBefore"></span>
-                                <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
-                        <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_4.jpg" alt="Portfolio Item">
-                            <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">900</span>
-                                </a>
-                                <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
-                                </div>
-                                <span class="btnBefore"></span>
-                                <span class="btnAfter"></span>
-                                <a class="main-portfolio-link" href="single-project.html"></a>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Item 5 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
                             <img src="img/home-portfolio/img_5.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">979</span>
-                                </a>
                                 <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
+                                    <span class="title">Aigle Logo</span>
+                                    <span class="info">branding</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
@@ -250,18 +230,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
+                    <!-- Item 6 -->
+                    <div class="col-md-4 col-sm-4 col-xs-12 mix web">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_6.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_4.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">1024</span>
-                                </a>
                                 <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
+                                    <span class="title">Yuria's Portfolio 2017</span>
+                                    <span class="info">Website</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
@@ -269,18 +245,14 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Item 7 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_7.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_3.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">2048</span>
-                                </a>
                                 <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
+                                    <span class="title">Poutine Talk</span>
+                                    <span class="info">Branding</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
@@ -288,18 +260,14 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Item 8 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_8.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_2.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">256</span>
-                                </a>
                                 <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
+                                    <span class="title">Jerry's Logo</span>
+                                    <span class="info">Branding</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
@@ -307,18 +275,14 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Item 9 -->
                     <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
                         <div class="img home-portfolio-image">
-                            <img src="img/home-portfolio/img_9.jpg" alt="Portfolio Item">
+                            <img src="img/home-portfolio/img_1.jpg" alt="Portfolio Item">
                             <div class="overlay-thumb">
-                                <a href="javascript:void(0)" class="like-product">
-                                    <i class="ion-ios-heart-outline"></i>
-                                    <span class="like-product">Liked</span>
-                                    <span class="output">256</span>
-                                </a>
                                 <div class="details">
-                                    <span class="title">STYLE FASHION</span>
-                                    <span class="info">NEW BAG & STYLE FASHION</span>
+                                    <span class="title">Aster Link Project</span>
+                                    <span class="info">Branding</span>
                                 </div>
                                 <span class="btnBefore"></span>
                                 <span class="btnAfter"></span>
@@ -327,9 +291,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="load-more">
-                <a href="javascript:void(0)" id="load-more"><i class="icon-refresh"></i></a>
             </div>
         </div>
     </div>
@@ -443,7 +404,7 @@
     <script src="js/vendor/textslide.js"></script>
     <script src="js/vendor/imagesloaded.pkgd.min.js"></script>
     <script src="js/vendor/tabs.js"></script>
-    <script src="js/ef-slider.js"></script>    
+    <script src="js/ef-slider.js"></script>
     <script src="js/vendor/owl.carousel.min.js"></script>
     <script src="js/vendor/jquery.magnific-popup.min.js"></script>
     <script src="js/vendor/jquery.social-buttons.min.js"></script>
