:bar_chart: Add skills' description

--- a/index.html
+++ b/index.html
@@ -301,33 +301,39 @@
         <div class="main-title">
             <h1>Skills & Interests</h1>
             <hr>
-            <h6>Except to obtain some advantage from it</h6>
+            <h6>My current skills and interests.</h6>
         </div>
         <div class="services-home-page">
             <div class="row">
+                <!-- Item 1 -->
                 <div class="col-md-4">
                     <div class="services-icon">
-                        <span class="icon-tools"></span>
+                        <span class="pe-7s-display1"></span>
                         <hr>
                     </div>
-                    <h4>BRANDING</h4>
-                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
+                    <h4>Web Development</h4>
+                    <p>Mainly writing views of softwares, HTML5, Sass and Javascript with Atom or VS Code is my part of work. But… I’m preparing to be a vimmer!</p>
+                    <br/>
                 </div>
+                <!-- Item 2 -->
                 <div class="col-md-4">
                     <div class="services-icon">
-                        <span class="icon-globe"></span>
+                        <span class="pe-7s-note"></span>
                         <hr>
                     </div>
-                    <h4>PLAN OF WORK</h4>
-                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
+                    <h4>UI/UX Design</h4>
+                    <p>After deciding concepts and organizing ideas, I start making mockups using Sketch or XD. I also design logos, animations and icons.</p>
+                    <br/>
                 </div>
+                <!-- Item 3 -->
                 <div class="col-md-4">
                     <div class="services-icon">
-                        <span class="icon-paintbrush"></span>
+                        <span class="pe-7s-coffee"></span>
                         <hr>
                     </div>
-                    <h4>ILUSTRATION</h4>
-                    <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because procure him.</p>
+                    <h4>Tea & Sweets</h4>
+                    <p>Having tea always helps me concentrating on work. I’m into coconuts milk babble tea now! Collecting tea and baking sweets make me fun as well.</p>
+                    <br/>
                 </div>
             </div>
         </div>
@@ -345,7 +351,7 @@
                         <h4>Hi, I'm Yuria Nishimura.<br/>
                             A Frontend Developer familier with UI/UX.
                         </h4>
-                        <p><br/>
+                        <p>
                             My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.<br/>
                             <br/>
                             In my spare time, I love working on side projects with my friends, enjoying having tea, playing board games and video games, traveling and cooking.
