:page_with_curl: Add copy

--- a/about.html
+++ b/about.html
@@ -110,9 +110,9 @@
                 <div class="row">
                     <div class="inner-content">
                         <div class="header-content">
-                            <h1>About Us</h1>
+                            <h1>About</h1>
                             <hr>
-                            <p>Everything created in simple way</p>
+                            <p>My bio, skills, interests and so on.</p>
                         </div>
                     </div>
                 </div>
@@ -122,18 +122,22 @@
 
     <div class="container margin-top">
         <div class="main-title near-content">
-            <h1>WE ARE OAK AGENCY</h1>
+            <h1>YURIA NISHIMURA</h1>
             <hr>
         </div>
         <div class="row">
-            <div class="col-md-4">
-                <p style="font-size: 18px; line-height: 26px;">Who loves or pursues or desires to <b>DESIGN</b> pain of itself,but because and occasionally circumstances occur pain can procure him some great easure of the past.</p>
+            <div class="col-md-12">
+                <p style="font-size: 18px; line-height: 26px;">
+                    I’m a frontend developer familiar with UI/UX.
+                </p>
             </div>
-            <div class="col-md-4">
-                <p>THE CREATIVE qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima quis nostrum exercitationem ullam corporis suscipit aliquid.</p>
-            </div>
-            <div class="col-md-4">
-                <p><strong>WEB DESIGN</strong> qui dolorem ipsum quia dolor sit amet, MINIMALISM adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam</p>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p>
+                    Please call me <strong>Julia</strong>, 
+                    if it is easy to remember for you :)
+                </p>
             </div>
         </div>
     </div>
@@ -142,178 +146,95 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="our-story wow fadeInUp" style="background: url(img/our-story.jpg) no-repeat" data-wow-duration="0.5s" data-wow-delay="0.2s">
-                <div class="col-md-6 col-md-offset-6">
+                    <div class="col-md-6 col-md-offset-6">
                         <div class="our-story-content wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
                             <div class="our-story-content-inner">
-                                <h1>OUR STORY</h1>
+                                <h1>MY BIO</h1>
                                 <hr>
                                 <p>
-                                    Great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally 
-                                    encounter consequences that are extremely painful. <br><br>
-                                    Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example.
-                                </p>
+                                    My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.
+                                    <br/><br/>
+                                    In my spare time, I love working on side projects with my friends, having tea and sweets, traveling, playing board games or video games, and cooking.                                </p>
                             </div>
                         </div>
-                </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Skills Column -->
     <div class="container margin-top">
         <div class="main-title">
-            <h1>WHY CHOOSE US?</h1>
+            <h1>SKILLS & INTERESTS</h1>
             <hr>
-            <h6>Except to obtain some advantage from it</h6>
+            <h6>My current skills and interests. Everything is connected and makes what I am today.</h6>
         </div>
-        <div class="col-md-4">
+        <div class="services-home-page">
             <div class="row">
-                <div class="services-home-page">
-                    <div class="col-md-12 wow fadeInUp" data-wow-duration="0.2s" data-wow-delay="0.2s">
-                        <div class="row">
-                            <div class="services-icon">
-                                <span class="icon-tools"></span>
-                                <hr>
-                            </div>
-                            <h4>BRANDING</h4>
-                            <p>Expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.</p>
-                        </div>
+                <!-- Item 1 -->
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="pe-7s-display1"></span>
+                        <hr>
                     </div>
-                    <div class="col-md-12 wow fadeInUp" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                        <div class="row">
-                            <div class="services-icon">
-                                <span class="icon-globe"></span>
-                                <hr>
-                            </div>
-                            <h4>PLAN OF WORK</h4>
-                            <p>The actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.</p>
-                        </div>
+                    <h4>Web Development</h4>
+                    <p>Mainly writing views of software, HTML5, Sass and Javascript with Atom or VS Code is my part of work. But… I’m preparing to be a vimmer!</p>
+                    <br/>
+                </div>
+                <!-- Item 2 -->
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="pe-7s-note"></span>
+                        <hr>
                     </div>
-                    <div class="col-md-12 wow fadeInUp" data-wow-duration="0.6s" data-wow-delay="0.6s">
-                        <div class="row">
-                            <div class="services-icon">
-                                <span class="icon-paintbrush"></span>
-                                <hr>
-                            </div>
-                            <h4>ILUSTRATION</h4>
-                            <p>Pound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because.</p>
-                        </div>
+                    <h4>UI/UX Design</h4>
+                    <p>After deciding concepts and organizing ideas, I start making mockups using Sketch or XD. I also design logos, animations and icons.</p>
+                    <br/>
+                </div>
+                <!-- Item 3 -->
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="pe-7s-look"></span>
+                        <hr>
                     </div>
+                    <h4>Perspectives</h4>
+                    <p>Since I’m curious, When exploring new tools I think its merits and how I would improve the product, which gives me ideas to solve problems.</p>
+                    <br/>
                 </div>
             </div>
-        </div>
-        <div class="col-md-7 col-md-offset-1">
-                <div class="our-story-image wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                    <img src="img/services.jpg" alt="Our Story">
-                </div>
-        </div>
-    </div>
-
-    <div class="container margin-top">
-        <div class="main-title">
-            <h1>OUR AMAZING TEAM</h1>
-            <hr>
-            <h6>Except to obtain some advantage from it</h6>
-        </div>
-        <div class="owl-carousel team">
-            <div>
-                <div class="img member">
-                    <img src="img/team/member_1.jpg" alt="Team Member">
-                    <div class="overlay-thumb">
-                        <div class="overlay-member-content">
-                            <div class="overlay-member-content-inner">
-                                <span class="position">WEB DEVELOPER</span>
-                                <hr>
-                                <ul class="member-social-media">
-                                    <li><a href="http://facebook.com/EliteFingers" target="_blank">Facebook</a></li>
-                                    <li><a href="http://twitter.com/EliteFingers" target="_blank">Twitter</a></li>
-                                    <li><a href="#" target="_blank">Dribbble</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="btnBefore"></span>
-                        <span class="btnAfter"></span>
+            <div class="row">
+                <!-- Item 4 -->
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="pe-7s-coffee"></span>
+                        <hr>
                     </div>
+                    <h4>Tea & Sweets</h4>
+                    <p>Having tea always helps me concentrating on work. I’m into coconuts milk babble tea now! Collecting tea and baking sweets make me fun as well.</p>
+                    <br/>
                 </div>
-                <span class="member-name">JOHN DOE</span>
-            </div>          
-
-            <div>
-                <div class="img member">
-                    <img src="img/team/member_2.jpg" alt="Team Member">
-                    <div class="overlay-thumb">
-                        <div class="overlay-member-content">
-                            <div class="overlay-member-content-inner">
-                                <span class="position">WEB DEVELOPER</span>
-                                <hr>
-                                <ul class="member-social-media">
-                                    <li><a href="http://facebook.com/EliteFingers" target="_blank">Facebook</a></li>
-                                    <li><a href="http://twitter.com/EliteFingers" target="_blank">Twitter</a></li>
-                                    <li><a href="#" target="_blank">Dribbble</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="btnBefore"></span>
-                        <span class="btnAfter"></span>
+                <!-- Item 5 -->
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="pe-7s-world"></span>
+                        <hr>
                     </div>
+                    <h4>Traveling</h4>
+                    <p>Seeing is believing. New unexpected discovery, historic remains and different cultures are what force me to travel around and to try local food.</p>
+                    <br/>
                 </div>
-                <span class="member-name">JOHN DOE</span>
-            </div>          
-
-            <div>
-                <div class="img member">
-                    <img src="img/team/member_3.jpg" alt="Team Member">
-                    <div class="overlay-thumb">
-                        <div class="overlay-member-content">
-                            <div class="overlay-member-content-inner">
-                                <span class="position">WEB DEVELOPER</span>
-                                <hr>
-                                <ul class="member-social-media">
-                                    <li><a href="http://facebook.com/EliteFingers" target="_blank">Facebook</a></li>
-                                    <li><a href="http://twitter.com/EliteFingers" target="_blank">Twitter</a></li>
-                                    <li><a href="#" target="_blank">Dribbble</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="btnBefore"></span>
-                        <span class="btnAfter"></span>
+                <!-- Item 6 -->
+                <div class="col-md-4">
+                    <div class="services-icon">
+                        <span class="pe-7s-joy"></span>
+                        <hr>
                     </div>
+                    <h4>Video & Board Games</h4>
+                    <p>While having a fun, I feel my creativity and work efficiency polished up. Let’s play Splatoon2 together!</p>
+                    <br/>
                 </div>
-                <span class="member-name">JOHN DOE</span>
-            </div>          
-
-            <div>
-                <div class="img member">
-                    <img src="img/team/member_1.jpg" alt="Team Member">
-                    <div class="overlay-thumb">
-                        <div class="overlay-member-content">
-                            <div class="overlay-member-content-inner">
-                                <span class="position">WEB DEVELOPER</span>
-                                <hr>
-                                <ul class="member-social-media">
-                                    <li><a href="http://facebook.com/EliteFingers" target="_blank">Facebook</a></li>
-                                    <li><a href="http://twitter.com/EliteFingers" target="_blank">Twitter</a></li>
-                                    <li><a href="#" target="_blank">Dribbble</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="btnBefore"></span>
-                        <span class="btnAfter"></span>
-                    </div>
-                </div>
-                <span class="member-name">JOHN DOE</span>
-            </div>    
-        </div>
-    </div>
-
-    <div class="container margin-top">
-        <div class="clients-wrapper">
-            <ul class="client-thumb">
-                <li><a href="#"><img src="img/clients/client_1.jpg" alt="Client 1"></a></li>
-                <li><a href="#"><img src="img/clients/client_2.jpg" alt="Client 1"></a></li>
-                <li><a href="#"><img src="img/clients/client_3.jpg" alt="Client 1"></a></li>
-                <li><a href="#"><img src="img/clients/client_4.jpg" alt="Client 1"></a></li>
-            </ul>
+            </div>
         </div>
     </div>
 
