:memo: Add catch

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         <div class="slider-wrapper">
             <div class="slider-description">
                 <div class="slider-description-inner">
-                    <h1>Pure<span>Elegance</span></h1>
+                    <h1>Necessity makes me<span>CREATIVE</span></h1>
                 </div>
                 <div class="cd-intro">
                     <div class="cd-headline clip">
                         <span class="cd-words-wrapper">
-                            <b class="is-visible">AWESOME THEME</b>
-                            <b>MODERN COMBINATION</b>
+                            <b class="is-visible">FRONTEND DEVELOPMENT</b>
+                            <b>UI/UX Design</b>
                             <b>CREATIVE SOLUTIONS</b>
                         </span>
                     </div>
@@ -299,9 +299,9 @@
     <!-- Skills Column -->
     <div class="container margin-top">
         <div class="main-title">
-            <h1>Skills & Interests</h1>
+            <h1>SKILLS & INTERESTS</h1>
             <hr>
-            <h6>My current skills and interests.</h6>
+            <h6>My current skills and interests. Everything is connected and makes what I am today.</h6>
         </div>
         <div class="services-home-page">
             <div class="row">
@@ -346,15 +346,15 @@
             <div class="col-md-6 wow fadeInUp" data-wow-duration="0.6s" data-wow-delay="0.5s">
                 <div class="row">
                     <article>
-                        <h1>About me</h1>
+                        <h1>ABOUT</h1>
                         <hr>
                         <h4>Hi, I'm Yuria Nishimura.<br/>
                             A Frontend Developer familier with UI/UX.
                         </h4>
                         <p>
-                            My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.<br/>
-                            <br/>
-                            In my spare time, I love working on side projects with my friends, enjoying having tea, playing board games and video games, traveling and cooking.
+                            My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.
+                            <br/><br/>
+                            <a href="about.html">More about me →</a>
                         </p>
                     </article>
                 </div>
