--- a/404.html
+++ b/404.html
@@ -78,9 +78,8 @@
                     <nav class="menu">
                         <div class="menu-list">
                             <ul>
-                                <li class="menu-item-has-children"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="menu-item-has-children"><a href="portfolio.html">Portfolio</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -91,6 +90,7 @@
                                 <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                                 <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
                                 <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                                <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                                 <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                                 <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
                             </ul>
@@ -125,6 +125,7 @@
                             <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                             <li><a href="https://dribbble.com/julia-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
                             <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                            <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                             <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
                         </ul>
